--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,19 @@
 {
     "buildCommand": "next build",
-    "cleanUrls": true
+    "cleanUrls": true,
+    "crons": [
+        {
+          "path": "/api/every-minute",
+          "schedule": "* * * * *"
+        },
+        {
+          "path": "/api/every-hour",
+          "schedule": "0 * * * *"
+        },
+        {
+          "path": "/api/every-day",
+          "schedule": "0 0 * * *"
+        }
+      ]
 }
 
