--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,45 @@
 {
-    "buildCommand": "next build",
-    "devCommand": "next dev",
-    "cleanUrls": true,
-    "crons": [
-        {
-          "path": "/api/every-minute",
-          "schedule": "* * * * *"
-        },
-        {
-          "path": "/api/every-hour",
-          "schedule": "0 * * * *"
-        },
-        {
-          "path": "/api/every-day",
-          "schedule": "0 0 * * *"
-        }
-      ]
-}
-
+    "headers": [
+      {
+        "source": "/service-worker.js",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "public, max-age=0, must-revalidate"
+          }
+        ]
+      },
+      {
+        "source": "/(.*)",
+        "headers": [
+          {
+            "key": "X-Content-Type-Options",
+            "value": "nosniff"
+          },
+          {
+            "key": "X-Frame-Options",
+            "value": "DENY"
+          },
+          {
+            "key": "X-XSS-Protection",
+            "value": "1; mode=block"
+          }
+        ]
+      },
+      {
+        "source": "/:path*",
+        "has": [
+          {
+            "type": "query",
+            "key": "authorized"
+          }
+        ],
+        "headers": [
+          {
+            "key": "x-authorized",
+            "value": "true"
+          }
+        ]
+      }
+    ]
+  }
